--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,22 @@
 aniso8601==4.0.1
+asn1crypto==0.24.0
 astroid==1.6.5
 backports.functools-lru-cache==1.5
+certifi==2018.10.15
+cffi==1.11.5
+chardet==3.0.4
 Click==7.0
 configparser==3.5.0
 coverage==4.5.1
+coveralls==1.5.1
+cryptography==2.3.1
+docopt==0.6.2
 enum34==1.1.6
 Flask==1.0.2
 Flask-RESTful==0.3.6
 futures==3.2.0
+idna==2.7
+ipaddress==1.0.22
 isort==4.3.4
 itsdangerous==1.1.0
 Jinja2==2.10
@@ -17,10 +26,14 @@ mccabe==0.6.1
 nose==1.3.7
 pep8==1.7.1
 pkg-resources==0.0.0
+pycparser==2.19
 pylint==1.9.3
+pyOpenSSL==18.0.0
 pytz==2018.7
+requests==2.20.0
 singledispatch==3.4.0.3
 six==1.11.0
+urllib3==1.24.1
 virtualenv==16.1.0
 Werkzeug==0.14.1
 wrapt==1.10.11
