--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ itsdangerous==1.1.0
 Jinja2==2.10
 lazy-object-proxy==1.3.1
 MarkupSafe==1.0
+marshmallow==2.16.3
 mccabe==0.6.1
 nose==1.3.7
 pep8==1.7.1
