--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,24 @@
-aniso8601==4.0.1
-asn1crypto==0.24.0
-astroid==1.6.5
-backports.functools-lru-cache==1.5
-certifi==2018.10.15
-cffi==1.11.5
-chardet==3.0.4
+aniso8601==3.0.2
+astroid==2.0.4
 Click==7.0
-configparser==3.5.0
+colorama==0.3.9
 coverage==4.5.1
-coveralls==1.5.1
-docopt==0.6.2
-enum34==1.1.6
 Flask==1.0.2
+Flask-HTTPAuth==3.2.4
 Flask-RESTful==0.3.6
-idna==2.7
-ipaddress==1.0.22
+gunicorn==19.9.0
 isort==4.3.4
-itsdangerous==1.1.0
+itsdangerous==0.24
 Jinja2==2.10
 lazy-object-proxy==1.3.1
 MarkupSafe==1.0
-marshmallow==2.16.3
 mccabe==0.6.1
 nose==1.3.7
 pep8==1.7.1
-pkg-resources==0.0.0
-pycparser==2.19
-pylint==1.9.3
-pyOpenSSL==18.0.0
-pytz==2018.7
-requests==2.20.0
-singledispatch==3.4.0.3
+pylint==2.1.1
+pytz==2018.5
 six==1.11.0
-urllib3==1.24.1
-virtualenv==16.1.0
+typed-ast==1.1.0
+virtualenv==16.0.0
 Werkzeug==0.14.1
 wrapt==1.10.11
