--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Jinja2==2.10
 lazy-object-proxy==1.3.1
 MarkupSafe==1.0
 mccabe==0.6.1
+marshmallow==2.16.3
 nose==1.3.7
 pep8==1.7.1
 pylint==2.1.1
