--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,8 @@ mccabe==0.6.1
 marshmallow==2.16.3
 nose==1.3.7
 pep8==1.7.1
+psycopg2==2.7.6.1
+psycopg2-binary==2.7.6.1
 pylint==2.1.1
 pytz==2018.5
 six==1.11.0
