--- a/.travis.yml
+++ b/.travis.yml
@@ -5,16 +5,21 @@ python:
 install:
   - pip install -r requirements.txt
   - pip install coveralls
+  - pip install psycopg2-binary
 services:
   - postgresql
 addons:
   postgresql: "9.5"
 
 before_script:
-  - psql -c "CREATE USER etomovich WITH PASSWORD 'etomovich';" -U postgres
-  - psql -c 'CREATE DATABASE sendit_db' -U etomovich
-  - psql -c 'CREATE DATABASE sendit_test_db' -U etomovich
-  - psql -c "GRANT ALL PRIVILEGES ON ALL TABLES IN SCHEMA public to etomovich;" -U postgres
+  - psql -c 'CREATE DATABASE sendit_db' -U postgres
+  - psql -c 'CREATE DATABASE sendit_test_db' -U postgres
+  - psql -c "GRANT ALL PRIVILEGES ON ALL TABLES IN SCHEMA public to postgres;" -U postgres
+  - psql -c "ALTER USER postgres WITH PASSWORD '1234';" -U postgres
+
+env:
+  - DB_URL="dbname='sendit_db' host='localhost' user='postgres' port='5432' password='1234'"
+  - TEST_DB_URL="dbname='sendit_test_db' host='localhost' user='postgres' port='5432' password='1234'"
 
 before_script:
   - export PYTHONPATH=`pwd`
