--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Click==7.0
 colorama==0.3.9
 coverage==4.5.1
 Flask==1.0.2
+Flask-Cors==3.0.7
 Flask-HTTPAuth==3.2.4
 Flask-RESTful==0.3.6
 gunicorn==19.9.0
